Suppression des mineurs du tableau 3

--- a/templates/Mission 1/tableau.html.twig
+++ b/templates/Mission 1/tableau.html.twig
@@ -7,8 +7,9 @@
 <h1>Tableau 3</h1>
 <ul>
     {% for tab3 in tab3 %}
-        <li>{{ tab3.NameSet|e }}</li>
+        <li>{{ tab3.Birthday|e }}</li>
     {% endfor %}
+    <li>Nombre de ligne : {{tab3|length}}</li>
 </ul>
 
 
