--- a/templates/Mission 1/tableau.html.twig
+++ b/templates/Mission 1/tableau.html.twig
@@ -7,7 +7,7 @@
 <h1>Tableau 3</h1>
 <ul>
     {% for tab3 in tab3 %}
-        <li>{{ tab3.Birthday|e }}</li>
+        <li>{{ tab3.FeetInches|e }}</li>
     {% endfor %}
     <li>Nombre de ligne : {{tab3|length}}</li>
 </ul>
