--- a/templates/Mission 1/tableau.html.twig
+++ b/templates/Mission 1/tableau.html.twig
@@ -6,10 +6,10 @@
 
 <h1>Tableau 3</h1>
 <ul>
-    {% for tab3 in tab3 %}
-        <li>{{ tab3.FeetInches|e }}</li>
+    {% for tableau in tableau %}
+        <li>{{ tableau.FeetInches|e }}</li>
     {% endfor %}
-    <li>Nombre de ligne : {{tab3|length}}</li>
+    <li>Nombre de ligne : {{tableau|length}}</li>
 </ul>
 
 
