--- a/templates/Mission 1/tableau.html.twig
+++ b/templates/Mission 1/tableau.html.twig
@@ -7,7 +7,7 @@
 <h1>Tableau 3</h1>
 <ul>
     {% for tableau in tableau %}
-        <li>{{ tableau.FeetInches|e }}</li>
+        <li>{{ tableau.CountryFull|e }}</li>
     {% endfor %}
     <li>Nombre de ligne : {{tableau|length}}</li>
 </ul>
