--- a/templates/Mission 1/index.html.twig
+++ b/templates/Mission 1/index.html.twig
@@ -17,13 +17,22 @@
             font-size: 20px;
         }
 
-        #form_melange_type{
+        #form_melange_type div{
             margin-top:10%;
-            
         }
 
         #form_melange_type_0{
             margin-right: 5em;
+        }
+
+        #form_melange_type div *{
+            font-size: 30px;
+        }
+
+        #form_melange_type_0,#form_melange_type_1{
+            height: 25px;
+            width: 25px;
+            margin-left: 1em;
         }
         
     </style>
