--- a/templates/Mission 1/upload.html.twig
+++ b/templates/Mission 1/upload.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-  <form action="{{ path('index') }}" method="post" enctype="multipart/form-data">
+  <form action="{{ path('do-upload') }}" method="post" enctype="multipart/form-data">
 
         <input type="hidden" name="token" value="{{ csrf_token('upload') }}" />
 
